welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:16: error: ';' expected but 'else' found.
	else if(litMessage == A)	
        ^BDRBuggle:18: error: ';' expected but 'else' found.
	else if(litMessage == B)	
        ^BDRBuggle:20: error: ';' expected but 'else' found.
	else if(litMessage == C)	
        ^BDRBuggle:22: error: ';' expected but 'else' found.
	else if(litMessage == Z)	
        ^BDRBuggle:24: error: ';' expected but 'else' found.
	else if(litMessage == Y)	
        ^BDRBuggle:26: error: ';' expected but 'else' found.
	else if(litMessage == X)	
        ^